# captura

./: README.md  bomba.yml  captura.wxs  pyproject.toml  requirements.txt  template.tex  test_config.yml
.github/: captura.wxs  dependabot.yml
.github/workflows/: ci.yml  jekyll-gh-pages.yml  release.yml
captura/: __init__.py  __main__.py  config.py  environment.py  test.py  util.py
captura/UI/: custom_widgets.py  wizard.py
captura/template/: library.py  renderer.py
captura/test/: checkbox_test.py  layout_h_and_v_test.py  test.py  widgets_test.py
captura/ui/: Homepage.py  Line.py  MainScrollArea.py  MainWindow.py  Menubar.py  TemplateDelegate.py  Wizard.py  __init__.py  homepage.py  template_delegate.py
captura/ui/config_widgets/: LCheckbox.py  LineEdit.py  List.py
captura/ui/dialog/: AboutDialog.py  FinalizeRenderDialog.py
docs/: .gitignore  _config.yml  build_docs.sh
docs/contributor/: index.md
docs/sphinx/: conf.py  index.rst
docs/templates/: index.md
docs/templates/config/: index.md  metadata.md  section.md
docs/user/: import_new_templates.md  index.md
docs/user/install/: from_code.md  index.md  linux.md  macos.md  windows.md
templates/com.github.mafelp.mitschrift/: config.yml
templates/com.github.mafelp.mitschrift/files/: index.tex
templates/com.github.mafelp.mla_essay/: config.yml
templates/com.github.mafelp.mla_essay/files/: essay.bib  essay.tex
