[tool.poetry]
name = "captura"
version = "0.1.0"
description = ""
authors = ["MaFeLP <mafelp@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.8.1"
jinja2 = "^3.1.5"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
