[tool.poetry]
name = "captura"
version = "0.1.0"
description = ""
authors = ["MaFeLP <mafelp@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pyqt6 = "^6.8.1"
jinja2 = "^3.1.5"
pyyaml = "^6.0.2"
pyxdg = "^0.28"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pyinstaller = "^6.12.0"
sphinx = "^8.2.3"
sphinx-markdown-builder = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

